--- a/SourceCode/src/projects/projects.module.css
+++ b/SourceCode/src/projects/projects.module.css
@@ -12,11 +12,12 @@
     display: flex;
     flex-direction: column;
     width: 60%;
-    height: 1000px;
+    height: auto;
     margin-top: 50px;
     margin-left: 475px;
     background-color: #f5f5f5;
     border-radius: 40px;
+    padding-bottom: 50px;
 }
 
 
