--- a/SourceCode/src/about/about.module.css
+++ b/SourceCode/src/about/about.module.css
@@ -2,13 +2,20 @@
     display: flex;
 }
 
+.mobileContainer{
+    margin-top: -15vh;
+    width: 100%;
+    display: block;
+}
+
 .barrier{
     height: 100px;
     width: 100%;
 }
 
 .aboutMeBoxLeft{
-    width: 55%;
+    width: 30%;
+    margin-left: 25%;
     height: 100%;
     color: white;
     text-align: left;
@@ -18,7 +25,40 @@
     margin-left: 45%;
 }
 
-.aboutMeBoxLeft h1{
+.aboutMeBoxMobile p, h1, h2, h3, h4, h5, h6{
+    margin-left: 0%;
+}
+
+.aboutMeBoxMobile h1{
+    margin-bottom: -5vh;
+}
+
+.aboutMeBoxMobile {
+    width: 70vw;
+    float: center;
+    height: auto;
+    color: white;
+    text-align: left;
+    margin-left: 35%;
+    margin-right: auto;
+}
+
+.aboutMeBoxMobileText{
+    width: 70vw;
+    height: auto;
+    float: center;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+    background-color: pink;
+    word-wrap: break-word;
+    font-size: 25px;
+    margin-left: 35%;
+    
+}
+
+.aboutMeBoxLeft h1, .aboutMeBoxMobile h1{
     font-size: 100px;
     font-family: 'Rubik', sans-serif;
 }
@@ -53,9 +93,15 @@
 }
 
 .aboutSocialLinks{
-    margin-left: 43.8%;
+    margin-left: 0;
+}
+
+.aboutSocialLinksMobile{
+    margin-left: 0;
 }
 
 .iconStyle{ 
     height: 30px;
+    margin-right: 20px;
+    margin-left: 6px;
 }
