--- a/SourceCode/src/resume/resume.module.css
+++ b/SourceCode/src/resume/resume.module.css
@@ -11,7 +11,7 @@
     width: auto;
     margin: 10px;
     display: inline-block;
-    margin-left: 150px;
+    margin-left: 10%;
 }
 
 .outerBox :hover{
