--- a/SourceCode/src/projects/projects.module.css
+++ b/SourceCode/src/projects/projects.module.css
@@ -14,7 +14,8 @@
     width: 60%;
     height: auto;
     margin-top: 50px;
-    margin-left: 475px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: #f5f5f5;
     border-radius: 40px;
     padding-bottom: 50px;
