--- a/SourceCode/src/projects/projectsMobile/projectsMobile.module.css
+++ b/SourceCode/src/projects/projectsMobile/projectsMobile.module.css
@@ -1,7 +1,7 @@
 .outerBox{
     width: 80vw;
-    margin-left: 70vw;
-    margin-right: 10vw;
+    margin-left: auto;
+    margin-right: auto;
     height: auto;
     background-color: #D9D9D9;
     border-radius: 30px;
@@ -17,17 +17,49 @@
     height: 40px;
 }
 
-.testModule{
-    height: 60px;
-    background-color: green;
+.blankBox{
+    height: auto;
     width: 80%;
     margin-left: 10%;
     margin-right: 10%;
+    align-items: center;
 }
 
-.blankBox{
-    height: 10vh;
+.mobileDropdown{
     width: 80%;
+    height: auto;
+    padding-bottom: 3%;
     margin-left: 10%;
     margin-right: 10%;
+    padding-top: 2%;
+    font-family: 'Rubik', sans-serif;
+    font-weight: bold;
+}
+
+/* Styles for text attribute */
+.blankBox h1{
+    font-family: 'Rubik', sans-serif;
+    font-weight: bold;
+    color: #d7d7d7;
+    text-decoration: none;
+}
+
+.mobileDropdown p{
+    margin-top: 15%;
+    margin: 0;
+    margin-bottom: 8%;
+}
+
+.mobileDropdown h2{
+    font-size:18px;
+    color: #d7d7d7;
+    margin-top: -3%;
+}
+
+.mobileDropdown a{
+    color: #d7d7d7;
+}
+
+.mobileDropdown a:hover{
+    color: #57B2C7;
 }
