--- a/src/navbar/mobilenavbar.module.css
+++ b/src/navbar/mobilenavbar.module.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap');
 
 .buttonHolder{
-    height: 50%;
+    height: 10vh;
     width: 50px;
     float: right;
     margin-right: 10%;
+    background-color: green;
 }
 
 .barrier{
