--- a/src/navbar/mobilenavbar.module.css
+++ b/src/navbar/mobilenavbar.module.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap');
 
 .buttonHolder{
-    height: 10vh;
+    height: 50px;
     width: 50px;
-    float: right;
-    margin-right: 10%;
+    margin-left: 75%;
+    margin-right: 25%;
+    padding-top: 15px;
 }
 
 .barrier{
-    height: 16vh;
+    height: 15px;
     width: 100%;
 }
 
@@ -41,7 +42,7 @@
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
     color: #FFFFFF;
-    font-size: 70px;
+    font-size: 60px;
     opacity: 100;
     height: 60px;
     width: auto;
@@ -50,10 +51,9 @@
 .eachLink a{
     color: #FFFFFF;
     text-decoration: none;
-    font-size: 50px;
+    font-size: 40px;
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
-    margin-top: -300px;
 }
 
 .linkBox .eachLink a:hover {
