--- a/src/navbar/navbar.module.css
+++ b/src/navbar/navbar.module.css
@@ -1,30 +1,27 @@
 .navbar{
+    height: 16vh;
     position:fixed;
     top:0;
     background-color: #749CB2;
-    width: 100%;
+    width: 100vw;
     color: white;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
-.navbarReduced{
+.mobileNavbar{
+    height: 80px;
+    background-color: #749CB2;
     position:fixed;
     top:0;
-    background-color: #749CB2;
-    width: 100%;
-    color: white;
-    display: flex; /* Add this */
-    align-items: center; /* Add this */
 }
 
 .links{
-    height: 16vh;
-    margin-top: 4vh;
     text-align: center;
     justify-content: center;
-    width: 60%;
     float: right;
-    margin-right: 13%;
+    margin-right: 20%;
 }
 
 .linkBox{
@@ -36,7 +33,7 @@
 }
 
 .eachLink{
-    margin-left: 10%;
+    margin-right: 10%;
     font: 'Rubik', sans-serif;
 }
 
@@ -56,12 +53,11 @@
 }
 
 .logo{
-    margin-top: 2vh;
     float: left;
     margin-left: 4%;
 }
 
 .reducedLogo{
-    margin-right: 20%;
     margin-left: 2%;
+    float: left;
 }
