--- a/src/homepage/mobileHomePage/mobile.module.css
+++ b/src/homepage/mobileHomePage/mobile.module.css
@@ -1,12 +1,12 @@
 .invisibleBarrier{
-    height: 18vh;
+    height: 80px;
     width: 100%;
 }
 
 .mark1{
     margin-left: auto;
     margin-right: auto;
-    height: 50vh;
+    height: 300px;
     border-radius: 100%;
     margin-top: 15%;
 }
@@ -14,7 +14,7 @@
 .otherMark{
     margin-left: auto;
     margin-right: auto;
-    height: 50vh;
+    height: 300px;
     border-radius: 100%;
     margin-top: 15%;
 }
